--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
             SECONDS
           </div>
         </div>
-        <form action="">
+        <form>
           <div class="email-box">
             <i class="fas fa-envelope"></i>
             <input
               class="tbox"
               type="email"
-              name=""
-              value=""
               placeholder="Enter your email"
             />
             <button class="btn" type="button" name="button">
@@ -77,8 +75,7 @@
           <div class="figure">
             <img
               src="https://www.ubackground.com/_ph/19/907167190.jpg"
-              alt=""
-              srcset=""
+              alt="img"
             />
             <div class="caption">
               <div class="about">
@@ -96,8 +93,7 @@
           <div class="figure">
             <img
               src="http://s1.1zoom.me/b4844/413/Game_of_Thrones_Fingers_white_walkers_Face_Hands_530216_1920x1080.jpg"
-              alt=""
-              srcset=""
+              alt="img"
             />
             <div class="caption">
               <div class="about">
